fix twitter styling in dark mode if twitter doesn't kick in

--- a/style/style.scss
+++ b/style/style.scss
@@ -914,8 +914,7 @@ blockquote.code {
     margin-left: auto;
     margin-right: auto;
     max-width: 550px;
-    background: white;
-    color: black;
+    @include colors(--bg-color);
     border: 0;
     .inner {
         padding: 0 1em.5em 1em;
